--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,20 @@
         <jelastic.context>gameoflife</jelastic.context>
         <jelastic.environment>wakaleo</jelastic.environment>
     </properties>
+    <distributionManagement>
+		<snapshotRepository>
+			<id>${env.ART_ID}</id>
+			<name>${env.ART_NAME}</name>
+			<url>${env.ART_URL}</url>
+		</snapshotRepository>
+		<repository>
+		<id>${env.REL_ART_ID}</id>
+			<name>${env.REL_ART_NAME}</name>
+			<url>${env.REL_ART_URL}</url>
+		</repository>
 
+	</distributionManagement>
+    
     <scm>
         <connection>scm:git:git@github.com:${github.account}/game-of-life.git</connection>
         <developerConnection>scm:git:git@github.com:${github.account}/game-of-life.git</developerConnection>
